@@ -7,6 +7,11 @@
 
 <ul>
 
+	<li>Fixed function and enumeraion type bugs in
+	mxmldoc.</li>
+
+	<li>Fixed XML schema for mxmldoc.</li>
+
 	<li>The mxmldoc program now supports --title and --intro
 	options.</li>
 
